--- a/chapter1.tex
+++ b/chapter1.tex
@@ -10,7 +10,7 @@ There are two mayor approaches to measure the temperature of a city. The first a
 In comparison, traditional meterological observation networks, such as the German Weather Service (DWD), offer a much higher temporal resolution at 10min intervals through the use of ground weather stations, however they are usually only available at very low spatial resolutions, as they are used to monitor the climate at a meso-scale level. Additionally, the placement of these stations is usually not optimized for the detection of UHI's, as they are commonly placed near to airports that are not located directly in the city center. They can however be used as reference stations to get an idea about the boundaries of the climate inside a city as they offer high quality data by using high quality reference sensors and follow WHO guidelines~\cite{oke2006guideline}.\\
 Lastly, there is the possibility of deploying sensor networks to closely monitor the climate of the city. These sensor networks can either be deployed professionally by the city itself or research projects for a limited time period, in that case called testbeds, or they can be deployed by citizens themselves, in that case called citizen-owned sensor networks or private weather station networks (PWS) in the case of crowd-sensing meterological data. Well-known examples of professionally setup testbeds include the Birmingham Urban Climate Laboratory (BUCL)~\cite{chapman2015birmingham} and the Helsinki Testbed~\cite{koskinen2011helsinki} that usually focus on measuring meso-scale weather phenomena and are very costly to run and maintain.
 PWS networks can either be run by citizens themselves, such as the Sensor.Community~\footnote{\url{https://deutschland.maps.sensor.community/}} project, or by companies, such as Netatmo~\footnote{\url{https://weathermap.netatmo.com/}}, however citizens are always responsible for the placement and maintenance of the individual sensors. Due to the lack of quality control, the data quality of these networks is usually not as high as the data quality of professional networks and require special data quality control (QC) steps~\cite{fenner2021crowdqc+, meier2017crowdsourcing}, however they offer a much higher spatial resolution and can be used to gain insights into the microclimate of a city. Recently, there have been efforts to combine the data from PWS networks, mainly from Netatmo, Wundermap, and Weather Underground, with data from national weather services, such as the DWD, to improve weather prediction quality. The main collaboration network in this area is EUMETNET which includes 31 european national meteorological services~\cite{hahn2022observations}.\\
-While these different approaches offer different advantages and disadvantages of measuring air temperature on the ground, they all have one thing in common: they only offer point measurements of the temperature at the location of the sensor. To get an overview of the temperature distribution across a city, interpolation methods are needed to create a continuous data-layer from the point measurements.
+While these different approaches offer different advantages and disadvantages of measuring air temperature (TA) on the ground, they all have one thing in common: they only offer point measurements of the temperature at the location of the sensor. To get an overview of the temperature distribution across a city, interpolation methods are needed to create a continuous data-layer from the point measurements.
 
 \section{Objective}
 
