--- a/references.bib
+++ b/references.bib
@@ -830,3 +830,12 @@
   year={2013},
   publisher={ACS Publications}
 }
+
+% Datasets
+@article{didan2021modis,
+  title={MODIS/Terra vegetation indices 16-day L3 global 1 km SIN grid V061 [data set]},
+  author={Didan, K},
+  journal={NASA EOSDIS Land Processes DAAC. Available online: https://lpdaac.usgs.gov/products/mod13a2v061/ (accessed on 1 August 2023)},
+  year={2021},
+  doi={10.5067/MODIS/MOD13A2.061}
+}
